openhab/openhab/base/ingressroute.yaml
# openhab.git: kustomize/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app openhab
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`oh.${SECRET_DOMAIN_0}`)"
      services:
        - kind: Service
          name: *app
          port: 80
  tls: {}
